# password_manager_LP

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 001_init.sql
src/: lib.rs  main.rs
src/infrastructure/: crypto.rs  database.rs  logger.rs  mod.rs
src/models/: credential.rs  mod.rs  user.rs  vault.rs
src/repositories/: credential_repository.rs  mod.rs  user_repository.rs  vault_repository.rs
src/services/: auth_service.rs  credential_service.rs  mod.rs
ui/: package.json
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/pages/: Auth.tsx  Dashboard.tsx  auth.css  dashboard.css
