[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "password_manager_cli"
path = "src/main.rs"

[dependencies]

# Identidade e Serialização
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Banco de Dados
rusqlite = { version = "0.37.0", features = ["bundled"] }
once_cell = "1.21.3"

# Segurança e Criptografia
argon2 = "0.5"
age = "0.10"
zeroize = { version = "1.7.0", features = ["alloc"] }

# Aleatoriedade
rand = "0.8.5"
rand_core = "0.6.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Variável de ambiente
dotenvy = "0.15.7"

# Erros
anyhow = "1"

# Útils
regex = "1.12.2"